navbar : fix: burger, logo and mobilemenu z-index change

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -40,6 +40,7 @@
   width: 2.4em;
   height: 2.35em;
   cursor: pointer;
+  z-index: 3;
 
   &__image {
     width: 100%;
@@ -148,6 +149,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  z-index: 3;
 
   @include mixins.mediumMinBreakPoint {
     display: none;
@@ -199,12 +201,12 @@
   position: fixed;
   top: -100vh;
   left: 0;
-  z-index: -1;
   clip-path: polygon(0 0, 100% 0, 50% 50%, 50% 50%);
   background-color: variables.$white;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
   transition: top 0.6s ease-in-out, clip-path 0.6s ease-in-out 0.1s;
 
 
